// ╔══════════════════════════════════════════════════════════════════════════╗
// ║ Skema WriterHub                                                          ║
// ╠══════════════════════════════════════════════════════════════════════════╣
// ║ Berkas ini DOKUMENTASI, bukan sumber kebenaran. Yang menentukan bentuk    ║
// ║ tabel sebenarnya adalah `apps/api/src/db/schemas/*.ts` dan migrasi di     ║
// ║ `apps/api/src/db/migrations/`.                                           ║
// ║                                                                          ║
// ║ Karena dipelihara tangan, ia pernah tertinggal: `templates` sempat tidak  ║
// ║ ada di sini sama sekali, dan `documents.layout` serta                     ║
// ║ `document_tabs.layout` menyusul belakangan tanpa ikut tercatat. Kalau     ║
// ║ Anda menambah kolom, perbarui juga di sini - dan bandingkan dengan        ║
// ║ keluaran `bun run db:generate` yang menyebut jumlah kolom tiap tabel.     ║
// ║                                                                          ║
// ║ Bagian terakhir berisi tabel yang BELUM ADA. Ia ditandai jelas dan tidak  ║
// ║ punya migrasi.                                                           ║
// ╚══════════════════════════════════════════════════════════════════════════╝

Enum identity_origin {
  ransel
  ppe
}

Enum version_trigger {
  manual
  interval
  pre_translate
  pre_restore
  ai_result
}

Enum share_access {
  anyone
  restricted
}

Enum share_role {
  viewer
  commenter
  editor
}

Enum pool_request_status {
  pending
  processing
  completed
  failed
  cancelled
}

// ── Identitas & proyek ─────────────────────────────────────────────────────

Table identity {
  id uuid [pk, not null]
  user_id varchar(255) [not null]
  origin identity_origin [not null]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (user_id, origin) [unique, name: 'identity_user_origin_idx']
  }

  Note: 'Satu baris per (user_id, origin). Portal luar yang memiliki user_id-nya; tabel ini yang memetakannya ke UUID internal.'
}

Table projects {
  id uuid [pk, not null]
  owner_id uuid [not null]
  name varchar(255) [not null]
  color varchar(32)
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (owner_id, updated_at) [name: 'projects_owner_idx']
  }

  Note: 'Belum punya tabel anggota: akses proyek hari ini berarti kepemilikan. Pemeriksaannya terpusat di lib/project-access.ts supaya penambahan anggota nanti hanya mengubah satu fungsi. Lihat project_members di bagian rencana.'
}

Table user_memories {
  owner_id uuid [pk, not null]
  preferences jsonb [not null, default: `'{}'::jsonb`]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]
}

// ── Dokumen ────────────────────────────────────────────────────────────────

Table documents {
  id uuid [pk, not null]
  title text [not null]
  project_id uuid [not null]
  template_slug varchar(64) [note: 'template yang melahirkan dokumen ini; null untuk dokumen kosong']
  layout jsonb [note: 'tata letak dasar; tab bisa menimpanya lewat document_tabs.layout']
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (project_id, updated_at) [name: 'documents_project_idx']
  }
}

Table document_tabs {
  id uuid [pk, not null]
  document_id uuid [not null]
  title text [not null]
  content jsonb [not null]
  emoji varchar(32)
  language varchar(32)
  layout jsonb [note: 'penimpa documents.layout untuk tab ini; null berarti ikut dokumen']
  position integer [not null, default: 0]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (document_id, position) [name: 'document_tabs_document_idx']
  }

  Note: 'Isi naskah tersimpan di server lewat PUT /v1/tabs/:tabId. Itu satu-satunya titik tempat server melihat isi dokumen - dan karena itu tempat yang benar untuk menurunkan document_assets.'
}

Table document_versions {
  id uuid [pk, not null]
  tab_id uuid [not null]
  content jsonb [not null]
  trigger version_trigger [not null]
  label varchar(255)
  word_count integer [not null, default: 0]
  created_by varchar(255)
  created_at timestamp [not null, default: `now()`]

  Note: 'Tanpa updated_at: versi adalah rekaman, ia tidak pernah disunting.'
}

// ── Template ───────────────────────────────────────────────────────────────
//
// KEPUTUSAN: template TIDAK dimiliki siapa pun. Ia katalog buatan dev.
//
// Tidak ada "template saya". Pengguna yang punya format sendiri mengimpor
// DOCX-nya lewat jalur impor biasa lalu menyunting dari situ - tidak ada baris
// yang lahir dari tindakan pengguna. Format per universitas ditulis tangan
// oleh dev sebagai template bawaan.
//
// Alasannya: portal PPE dijual ke khalayak umum dan tidak memberi identitas
// institusi apa pun, jadi satu-satunya pemilik yang bisa dipasang adalah
// perorangan - dan format skripsi Unpad bukan milik seorang mahasiswa. Kalau
// scope-nya perorangan, satu format yang sama tersimpan ulang sebanyak
// mahasiswa yang mengunggahnya, dan tidak seorang pun bisa membaginya.
//
// Tabel ini dulu punya `owner_id` (selalu NULL) dan `builtin` (selalu true),
// ditambahkan di P0 untuk mengantisipasi "template buatan pengguna" yang tidak
// pernah datang. Keduanya dihapus bersama `templates_owner_idx` di migrasi
// `0025_careful_sugar_man.sql`. Jangan menambahkannya kembali tanpa fitur yang
// benar-benar mengisinya - kolom yang ditambahkan lebih dulu daripada
// pemakainya adalah persis kesalahan yang migrasi itu perbaiki.
//
// ┌ MENAMBAH TEMPLATE BARU - baca ini dulu ─────────────────────────────────┐
//
// 1. Definisinya KODE, bukan baris database. Tulis di
//    `services/templates/catalog/<kategori>.ts`; ia di-upsert saat boot
//    berdasarkan slug. Menyisipkan baris langsung ke tabel akan tertimpa.
//
// 2. Slug per institusi memakai awalan institusi, yang umum tanpa awalan:
//       unpad-ta1-elektro, ugm-skripsi, itb-tesis
//       skripsi-id, ieee-paper
//
// 3. JANGAN mengganti slug yang sudah dirilis. `documents.template_slug`
//    menyimpannya sebagai varchar TANPA foreign key, jadi mengganti nama
//    tidak memicu error apa pun - ia hanya diam-diam memutus dokumen lama
//    dari templatenya, dan tidak ada constraint yang akan memberi tahu.
//
// 4. `category` hanya punya 4 nilai, jadi ia tidak bisa memisahkan template
//    antar universitas. Itu tugas `institution` - lihat kolomnya di bawah.
//
// └─────────────────────────────────────────────────────────────────────────┘

Table templates {
  id uuid [pk, not null]
  slug varchar(64) [not null, unique, note: 'unik GLOBAL; berawalan institusi untuk template per kampus']
  name text [not null]
  description text [not null]
  category varchar(32) [not null]
  locale varchar(8) [not null]
  spec jsonb [not null]
  content jsonb [not null]
// institution varchar(128) [note: 'BELUM ADA - sengaja ditahan. Label penyaring galeri, mis. "Universitas Padjadjaran"; NULL untuk template umum. LABEL, BUKAN PEMILIK: tanpa FK, tidak ikut pemeriksaan izin apa pun. Ditahan sampai ada cukup template institusi untuk disaring; menambahkannya sekarang mengulang kesalahan owner_id.']
  position integer [not null, default: 0]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (category, position) [name: 'templates_category_idx']
//  institution [name: 'templates_institution_idx']   BELUM ADA
  }

  Note: 'Seluruh isinya bawaan: ditulis sebagai kode dan di-upsert saat boot berdasarkan slug. Tidak ada jalur tulis dari pengguna - routes/v1/templates.route.ts hanya punya GET.'
}

// ── Aset gambar ────────────────────────────────────────────────────────────

Table assets {
  id uuid [pk, not null]
  project_id uuid [not null]
  key varchar(512) [not null, note: 'kunci objek di penyimpanan, bukan URL - URL selalu diterbitkan saat diminta']
  mime varchar(127) [not null]
  bytes integer [not null]
  width integer
  height integer
  name varchar(255) [not null]
  checksum char(64) [not null, note: 'sha256 isi berkas; dedupe per proyek']
  created_by uuid
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (project_id, created_at) [name: 'assets_project_idx']
    (project_id, checksum) [name: 'assets_project_checksum_idx']
  }

  Note: 'Kepemilikan mengikuti proyek - itu yang membuatnya berguna sebagai pustaka lintas dokumen. Tapi kepemilikan BUKAN pemberian akses: lihat document_assets. SVG dibersihkan saat unggah (lib/svg-sanitize.ts), jadi yang tersimpan sudah tidak berbahaya apa pun yang membukanya nanti.'
}

Table document_assets {
  document_id uuid [not null]
  asset_id uuid [not null]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (document_id, asset_id) [pk]
    asset_id [name: 'document_assets_asset_idx']
  }

  Note: 'Ada murni untuk keamanan. Pemilik proyek boleh menerbitkan URL untuk aset mana pun miliknya; pemegang share link HANYA untuk yang tercatat di sini bagi dokumen itu. Tanpa pembedaan itu, satu tautan access=anyone ke satu dokumen membuka seluruh pustaka proyeknya ke internet. CATATAN: sekarang diisi klien lewat PUT /v1/assets/links, dan klien adalah pihak yang diuntungkan kalau ia berbohong - rencananya diturunkan server saat document_tabs.content disimpan.'
}

// ── Pekerjaan AI & berbagi ─────────────────────────────────────────────────

Table pool_request {
  id uuid [pk, not null]
  job_id varchar(255) [not null, unique]
  status pool_request_status [not null, default: 'pending']
  error text
  params jsonb
  total_tokens integer
  model_record_id integer
  user_id varchar(255)
  tab_id uuid
  feature varchar(50)
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (user_id, created_at) [name: 'pool_request_user_created_idx']
  }
}

Table metadata_version {
  id uuid [pk, not null]
  job_id varchar(255) [not null, unique]
  request_id uuid [not null]
  version_id uuid [note: 'nullable: hasil riset web tidak menghasilkan versi dokumen apa pun']
  feature varchar(50) [not null]
  result jsonb [not null]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]
}

Table shares {
  id uuid [pk, not null]
  document_id uuid [note: 'nullable dengan delete: set null - tautan yang dokumennya sudah dihapus tetap ada sebagai baris yatim']
  token varchar(255) [not null, unique]
  access share_access [not null]
  role share_role [not null]
  created_by varchar(255)
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Note: 'access=anyone berarti tautan publik tanpa autentikasi. Itu sebabnya izin aset tidak boleh mengikuti scope proyek.'
}

Ref: projects.owner_id > identity.id
Ref: user_memories.owner_id > identity.id
Ref: documents.project_id > projects.id [delete: restrict]
Ref: document_tabs.document_id > documents.id [delete: cascade]
Ref: document_versions.tab_id > document_tabs.id [delete: cascade]
Ref: metadata_version.request_id > pool_request.id [delete: cascade]
Ref: metadata_version.version_id > document_versions.id [delete: cascade]
Ref: pool_request.tab_id > document_tabs.id [delete: set null]
Ref: shares.document_id > documents.id [delete: set null]
Ref: assets.project_id > projects.id [delete: cascade]
Ref: assets.created_by > identity.id
Ref: document_assets.document_id > documents.id [delete: cascade]
Ref: document_assets.asset_id > assets.id [delete: cascade]

// Ada di database hari ini.
TableGroup terpasang {
  identity
  projects
  user_memories
  documents
  document_tabs
  document_versions
  templates
  assets
  document_assets
  pool_request
  metadata_version
  shares
}

// ╔══════════════════════════════════════════════════════════════════════════╗
// ║ RENCANA - BELUM ADA DI DATABASE                                          ║
// ║                                                                          ║
// ║ Tabel di bawah ini TIDAK punya skema Drizzle dan TIDAK punya migrasi.    ║
// ║ Ia digambar di sini supaya bentuk akhirnya terbaca sekarang, bukan       ║
// ║ karena ia sudah ada. Jangan menulis kode yang mengandalkannya.           ║
// ╚══════════════════════════════════════════════════════════════════════════╝

Enum project_role_RENCANA {
  owner
  editor
  viewer
}

Table project_members_RENCANA {
  project_id uuid [not null]
  identity_id uuid [not null]
  role project_role_RENCANA [not null]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (project_id, identity_id) [pk]
    identity_id
  }

  Note: 'Saat ini akses proyek = kepemilikan. Ketika tabel ini masuk, satu-satunya yang berubah adalah isi canAccessProject() di lib/project-access.ts - bukan setiap tempat yang memeriksa izin. Itulah alasan fungsi itu sudah ada sekarang meski isinya sepele.'
}

Table asset_library_RENCANA {
  id uuid [pk, not null]
  slug varchar(64) [not null, unique]
  name varchar(255) [not null]
  category varchar(32) [not null]
  key varchar(512) [not null]
  mime varchar(127) [not null]
  width integer
  height integer
  position integer [not null, default: 0]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (category, position)
  }

  Note: 'Pustaka bawaan ala Canva. Sengaja TIDAK punya project_id maupun owner_id: ia global dan publik menurut definisinya, disajikan langsung dari prefix bucket yang publik tanpa tanda tangan. Mencampurnya ke tabel assets berarti membayar ongkos otorisasi untuk berkas yang boleh dilihat siapa saja.'
}

// BELUM ADA. Tanpa skema Drizzle, tanpa migrasi.
TableGroup rencana {
  project_members_RENCANA
  asset_library_RENCANA
}

// ╔══════════════════════════════════════════════════════════════════════════╗
// ║ SENGAJA TANPA TABEL                                                      ║
// ║                                                                          ║
// ║ Bagian ini tidak menggambar apa pun. Ia ada supaya pembaca berikutnya    ║
// ║ tidak menambahkan tabel yang memang diputuskan untuk tidak ada.          ║
// ╚══════════════════════════════════════════════════════════════════════════╝

// ── Draf & ekspor berkas ───────────────────────────────────────────────────
//
// `POST /v1/drafts` menerima `output` ('pdf' | 'docx' | 'png' | 'jpg') dan
// menjawab dengan `downloads` serta `renderErrors`. Tidak satu pun dari itu
// punya tabel, dan itu keputusan - bukan kelalaian:
//
// - **Permintaan draf** tinggal di Redis, `draft:request:<documentId>`, TTL 24
//   jam (`services/drafts/request-store.ts`). Ia hanya perlu bertahan selama
//   tombol "coba lagi" masih masuk akal.
// - **Status penulisan** di Redis juga, `draft:status:<documentId>`, dengan
//   tenggat yang ditegakkan (`services/drafts/status.ts`). Alasannya tertulis
//   di sana: sesudah naskahnya tersimpan di tabnya, dokumen itu tidak berbeda
//   dari dokumen mana pun - kolom permanen justru akan basi.
// - **Berkas hasil render** tinggal di bucket dengan prefix `exports/` dan
//   aturan lifecycle "hapus setelah 1 hari"; yang dikembalikan API adalah URL
//   bertanda tangan yang umurnya lebih pendek dari objeknya. Tidak ada baris
//   yang perlu diingat untuk sesuatu yang dihapus besok.
//
// Bandingkan dengan `assets` di atas, yang justru **punya** tabel: aset adalah
// pustaka yang dipakai ulang lintas dokumen dan izinnya harus bisa ditelusuri
// (`document_assets`). Berkas ekspor tidak dipakai ulang dan tidak punya
// pertanyaan izin selain tanda tangannya sendiri.
//
// Lihat `docs/RENDER-WORKER-PLAN.md` §6 dan §7.
